--- a/config.json
+++ b/config.json
@@ -16,15 +16,15 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "Nice Try Diddy",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100086680386976",
-        "100063460095373",
-        "61550035211214"
+        "100091520325159",
+        "",
+        ""
     ],
     "NDH": [
-        "100082395531611"
+        "100091520325159"
     ],
     "DATABASE": {
         "sqlite": {
