--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,12 @@
 [
     {
-        "key": "dbln",
-        "value": "%7B%2261572952711884%22%3A%22Zt0puMAq%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.282Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
-    },
-    {
         "key": "datr",
         "value": "wQ8jaEKeBcBXvG6F6lnhmp_O",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.500Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "sb",
@@ -23,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "ps_n",
@@ -41,35 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61572952711884",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
-    },
-    {
-        "key": "fr",
-        "value": "09HeKu1abUw6Eoqnw.AWe5ufbI2DuJNqAP0-x8YV1j428GA03VI1UBacF3GYbfp4dp4WM.BoIw_B..AAA.0.0.BoIxHS.AWfJYdxzDHOP-P-e-Qi2_K9f87g",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
-    },
-    {
-        "key": "xs",
-        "value": "37%3A4t1Aa5GVMTG-fA%3A2%3A1747128790%3A-1%3A5446",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "locale",
@@ -77,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "vpd",
@@ -86,25 +50,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61572952711884",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
+    },
+    {
+        "key": "fr",
+        "value": "09HeKu1abUw6Eoqnw.AWfM1eRYvAFGrfngIOomBdeBcXY0E1XuafXXIUxgfJCBcWfddMc.BoIw_B..AAA.0.0.BoIxgJ.AWdzgK8s2dZXrPcZFNuvCs7RsZU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
+    },
+    {
+        "key": "xs",
+        "value": "18%3ATh9DbY8jOg2UWw%3A2%3A1747130378%3A-1%3A5446",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "fbl_st",
-        "value": "100430035%3BT%3A29118827",
+        "value": "101424184%3BT%3A29118839",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.283Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2816%3Btimestamp%3A1747129619",
+        "value": "v2%3Bclient_version%3A2816%3Btimestamp%3A1747130382",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-13T09:47:05.283Z",
-        "lastAccessed": "2025-05-13T09:47:05.284Z"
+        "creation": "2025-05-13T09:59:48.501Z",
+        "lastAccessed": "2025-05-13T09:59:48.501Z"
     }
 ]
